# yast-fingerprint-reader

./: RPMNAME  yast2-fingerprint-reader.spec.in
agent-fprint/: Makefile.am
agent-fprint/conf/: Makefile.am  fprint.scr
agent-fprint/doc/autodocs/: Makefile.am
agent-fprint/src/: FPrintAgent.cc  FPrintAgent.h  Makefile.am  Y2CCFPrintAgent.cc
agent-fprint/testsuite/: Makefile.am
agent-thinkfinger/conf/: Makefile.am  thinkfinger.scr
agent-thinkfinger/doc/autodocs/: Makefile.am
agent-thinkfinger/src/: Makefile.am  ThinkFingerAgent.cc  ThinkFingerAgent.h  Y2CCThinkFingerAgent.cc
agent-thinkfinger/testsuite/: Makefile.am
doc/: Makefile.am
doc/autodocs/: Makefile.am
package/: yast2-fingerprint-reader.changes
src/: FingerprintReader.ycp  Makefile  Makefile.am  Makefile.in  UsersPluginFingerprintReader.pm  complex.ycp  dialogs.ycp  fingerprint-reader.desktop  fingerprint-reader.ycp  helps.ycp  users_plugin_fingerprint_reader.ycp  wizards.ycp
src/clients/: fingerprint-reader.rb  fingerprint-reader.ycp  users_plugin_fingerprint_reader.rb
src/desktop/: fingerprint-reader.desktop
src/include/fingerprint-reader/: dialogs.rb  dialogs.ycp  helps.rb  helps.ycp  wizards.rb
src/modules/: FingerprintReader.rb  FingerprintReader.ycp  UsersPluginFingerprintReader.pm
testsuite/tests/: FingerprintReader.out  FingerprintReader.ycp
